--------------------
* atkLanguage now also supports empty values in language files. [Boy]
+ atkEncryption and atkBase64Encryption introduced [Mark]
+ atkSecureRelation introduced [Mark]
* Added documentation to new classes above [Boy]
* atkManyToManyRelation sets the ref and local key upon construction [Mark]
+ Added NF_NUMBERING and AF_SUBITEM, setting these will number the fields [Boy]

Changes in ATK 5.0.3
--------------------
* Small bugfixes in language files. [Boy, Ivo]
* Fixed bug in the value of NF_MULTILANGUAGE. [Ivo]
* atkDateAttribute no longer displays current date unless obligatory. [Boy]
* Fixed remaining bugs with tabs. (bug #301) [Boy]
* If an attribute doesn't validate, the error now shows the tabname. [Boy]
* Improvements and cleanups in atkLanguage. [Boy]
* Small bugfix in atkFileExport, and added XML mime type. [Sandy]
* Small modifications to facilitate HTML 4.01 validation. [Boy]
* Improvements to atkTheme and atkThemeCompiler:
  * atkTheme now uses default icon if it can't find any. [Boy]
  * Added config variable that forces recompile of theme cache. [Boy]
  * Writing cache file now reports an error if something is wrong. [Boy]
  + Autodetecting of themefiles. [Boy]
* Fix for bug with select pages when AF_LARGE is set. (bug #302) [Boy]
* Fixed the Multi Record Actions. [Sandy] 
* Fixed bug in the fileattribute. (bug #300) [Sandy]
* Fixed bug with tabs and modifiers. (bug #311) [Boy]
* Updated atktools documentation. [Boy]
* Fixed typo in a flag that caused a wrong count query. (bug #307) [Nicola]
* Fixed bug in the atkmanytoonerelation. (bug #308) [Ruiz]
* Fixed bug in saving float values (atknumberattribute). [Martin]

Changes in ATK 5.0.2
--------------------
* Fixed missing db_sequence entries in demo install.sql file. [Yuri]
* Fixed several bugs in dhtml tabs. (bug #301) [Boy]
* Fixed NF_LOCK images. [Boy]
* Fixed bug in atkFileAttribute's AF_FILE_PHYSICAL_DELETE. [Ivo]
* atkNumberAttribute can now save NULL values. [Martin]
