@@ -84,6 +84,7 @@
   $config_menu_delimiter = "<br>";
   $config_menu_pos = "left";
   $config_menu_layout = "default";
+  $config_menu_align = "center";
   $config_top_frame = 0; // 0 = no   - 1 = yes
   $config_defaulttheme = "default";
   $config_defaultlanguage = "nl";
