@@ -41,10 +41,10 @@
   $loggedin = text("loggedin_user", "", "atk").": <b>".$g_user["name"]."</b>";  
   $content = '<br>'.$loggedin.' &nbsp; <a href="app.php?atklogout=1" target="_top">.'.ucfirst(text("logout", "", "atk")).'.</a><br>&nbsp;';
   
-  $box = $ui->renderBox(array("title"=>text("topframe"),
+  $top = $ui->renderTop(array("title"=>text("topframe"),
                                             "content"=>$content));
  
-  $page->addContent($box);
+  $page->addContent($top);
 
   $output->output($page->render(text('txt_app_title'), true));
   
